Fix: Tried again to fix z-index

--- a/style.css
+++ b/style.css
@@ -205,18 +205,17 @@ nav a:hover
 .mask
 {
     pointer-events: none;
-    position: relative;
+    position: relative
 }
 .carbon
 {
-    position: relative;
     min-height: calc(var(--height) + 70svh);
     pointer-events: none;
     background-image: url("./assets/carbon.png");
     background-position: 50% 100%;
     background-size: contain;
     background-repeat: no-repeat;
-    z-index: 20;
+
 }
 
 .gradient
